# dtc_de_course

./: .gitignore  Dockerfile  README.md  Readme.md  pipeline.py  pyproject.toml
week_1_basics_and_setup/: Readme.md
week_1_basics_and_setup/1_docker_sql/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  pipeline.py  temp.sh  upload-data.ipynb  upload-zones.ipynb
week_1_basics_and_setup/2_gcp_terraform/: Readme.md
week_1_basics_and_setup/2_gcp_terraform/terraforms/: .terraform.lock.hcl  terraform.tfstate
week_1_basics_and_setup/2_gcp_terraform/terraforms/.terraform/: terraform.tfstate
week_2_workflow_orchestration/: Dockerfile  Readme.md  ingest_data.py
week_2_workflow_orchestration/1_start/: ingest_data.py
week_2_workflow_orchestration/2_gcp/: etl_gcs_to_bq.py  etl_parent_flow-deployment.yaml  etl_web_to_gcp.py  parameterized_flow.py
week_2_workflow_orchestration/3_deployment/: docker-deploy.py  etl_parent_flow-deployment.yaml  parameterized_flow.py
week_2_workflow_orchestration/Homework/: etl_gcs_to_bq.py  etl_web_to_gcp.py  etl_web_to_gcs-deployment.yaml  gcs_to_bq_parent_flow-deployment.yaml
week_2_workflow_orchestration/Homework/Question 4/: etl_web_to_gcp.py  github_deploy.py
week_3_data_warehouse/: Readme.md
week_3_data_warehouse/Homework/: big_query_home_work.sql  etl_web_to_gcp.py  etl_web_to_gcs-deployment.yaml
