[tool.poetry]
name = "dtc-de-course"
version = "0.1.0"
description = "data talk club zoomcamp"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dtc_de_course"}]

[tool.poetry.dependencies]
python = "3.11.1"
google-cloud-storage = "^2.7.0"
pandas = "^1.5.3"
SQLAlchemy = "^1.4.46"
prefect = "^2.7.7"
prefect-sqlalchemy = "^0.2.2"
prefect-gcp = "^0.2.4"
protobuf = "^4.21.11"
pyarrow = "^10.0.1"
pandas-gbq = "^0.18.1"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
